@@ -17,6 +17,7 @@ v8.0.31
 - BUG#28491115: Connector/Python crashes on 0 time value
 - BUG#28295478: Align exception types raised by pure Python and c-ext
 - BUG#27634910: Add warning count method to cursors
+- BUG#21463298: Fix weakly-referenced object no longer exists exception
 
 v8.0.30
 =======
